syntax = "proto3";

package gophkeeper.v1;

option go_package = "github.com/cliffordsimak-76-cards/gophkeeper/pkg/gophkeeper-api/v1;api";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1; 
}